Dark mode and overflow fixes for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1,99 +1,3 @@
-/*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */
-
-/*
- * What follows is the rest of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
-html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
-}
-
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * These selection rule sets have to be separate.
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
-
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-    vertical-align: middle;
-}
-
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-    resize: vertical;
-}
-
-/* ==========================================================================
-   Browser Upgrade Prompt
-   ========================================================================== */
-
-.browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-
-/* ==========================================================================
-   Custom styles
-   ========================================================================== */
 
 
 
@@ -124,8 +28,10 @@ h1 {
  display: flex;
  flex-direction: column;
  align-items: center;
- margin: -26px 0 0 0;
+ margin: -36px 0 0 0;
  font-weight: 500;
+ font-size: 1.6rem;
+ letter-spacing: .02rem;
 }
 
 a, a:active, a:hover, a:visited {
@@ -183,6 +89,8 @@ a:hover {
  align-items: center;
  
 }
+
+
 
 #rtreadings {
  text-decoration: underline;
@@ -265,6 +173,7 @@ ul {
   bottom: 10px;
   align-self: center;
 } 
+
 
 
 
@@ -429,27 +338,6 @@ li.rss-item a.rss-item {
   text-decoration: none;
 }
 
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Hide visually and from screen readers
- */
-
-.hidden {
-    display: none !important;
-}
-
-
-
-/*
- * Hide visually and from screen readers, but maintain layout
- */
-
-.invisible {
-    visibility: hidden;
-}
 
 /*
  * Clearfix: contain floats
@@ -479,7 +367,7 @@ li.rss-item a.rss-item {
     color: black;
   }
   #card {
-    background-color: #010101;
+    background-color: rgba(0,0,0,0.8);
     color: lightgray;
   }
   a, a:hover, a:active, a:visited {
@@ -489,13 +377,22 @@ li.rss-item a.rss-item {
     color: black;
   }
   #menuToggle span {
-    background: black;
+    background: lightgray;
   }
   #menu {
     background-color: black;
     color: white;
   }
   #menuToggle a {
+    color: lightgray;
+  }
+
+  nav {
+    background-color: rgba(0,0,0,0.8);
+    height: 40px;
+    
+  }
+  h1 {
     color: lightgray;
   }
  
@@ -510,12 +407,16 @@ li.rss-item a.rss-item {
 
 @media only screen and (min-width: 60em) {
     /* Style adjustments for viewports that meet the condition */
+    body {
+      overflow-x: hidden;
+    }
+    
     #card {
         width: 620px;
        }
     #card-container {
     font-size: 1.1rem;
-   
+
 
     
     }
